--- a/django_youtube/templates/django_youtube/video_unavailable.html
+++ b/django_youtube/templates/django_youtube/video_unavailable.html
@@ -1,2 +1,6 @@
-<div>{{ message }}</div>
-<div><img src="{{ video.default_thumbnail.url }}" alt="{{ video.title }}" /></div>
+{% extends "base.html" %}
+{% load i18n %}
+{% block content %}
+    <div>{{ message }}</div>
+    <div><img src="{{ video.default_thumbnail.url }}" alt="{{ video.title }}" /></div>
+{% endblock %}
