--- a/example/youtube_project/youtube_project/templates/home.html
+++ b/example/youtube_project/youtube_project/templates/home.html
@@ -1,14 +1,10 @@
-<h1>Django Youtube Sample Project</h1>
+{% extends "base.html" %}
+{% load i18n %}
 
-<p>
-	{% if request.user.is_authenticated %}
-		<a href="{% url logout %}">Logout</a>
-	{% else %}
-		<a href="{% url login %}">Login</a> |
-		<a href="">Register</a>
-	{% endif %}
-</p>
+{% block content %}
 <ul>
-	<li><a href="{% url youtube_video_list %}">List of videos</li>
-	<li><a href="{% url youtube_upload %}">Upload</li>
+	<li><a href="{% url youtube_video_list %}">{% trans "List of videos" %}</li>
+	<li><a href="{% url youtube_upload %}">{% trans "Upload" %}</li>
 </ul>
+{% endblock %}
+
